--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,8 @@
   --bg-color: #A96346;
   --sidebar-color: #2b292f;
   --text-color: #f5f1f1;
+  --nav-height: 50px;
+  --nav-color: #2C2E28;
   /* GLOBALS*/
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
