--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,13 @@
 :root {
   /* VARIABLES*/
-  --bg-color: #A96346;
+  --bg-color: #fff;
+  --secondary-bg: #f2f2f2;
   --sidebar-color: #2b292f;
-  --text-color: #f5f1f1;
+  --text-color: #000;
   --nav-height: 50px;
-  --nav-color: #2C2E28;
+  --nav-color: #fff;
+  --select-bg: #d1d1d1;
+  --link-color: #106ba3;
   /* GLOBALS*/
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -26,3 +29,41 @@ html, body {
   padding: 0;
 }
 
+.nodeLink {
+  font-size: inherit;
+  color: var(--link-color);
+  border: none;
+  border-radius: 0.5em;
+  background: none;
+  padding-right: 0;
+  margin-left: 6px;
+  padding-left: 0;
+}
+
+.nodeLink:hover {
+  background-color: var(--select-bg);
+}
+
+h1 {
+  font-size: 2em;
+}
+
+h2 {
+  font-size: 1.5em;
+}
+
+h3 {
+  font-size: 1.17em;
+}
+
+h4 {
+  font-size: 1em;
+}
+
+h5 {
+  font-size: 0.83em;
+}
+
+h6 {
+  font-size: 0.67em;
+}
